--- a/style.css
+++ b/style.css
@@ -9,4 +9,13 @@
 
 body{
     background: #000;
+    padding: 50px;
+}
+form{
+    color: #fff;
+}
+
+fieldset{
+    width: 500px;
+    text-align: center;
 }
