--- a/style.css
+++ b/style.css
@@ -19,9 +19,10 @@ form{
 
 fieldset{
     width: 500px;
-    text-align: center;
+    padding: 20px;
 }
 
 select{
     width: 500px;
+    margin: 20px 0 20px 0;
 }
