--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 *{
     padding: 0;
     margin: 0;
-    outline: 0;
+    outline-color: transparent;
     box-sizing: border-box;
     list-style-type: none;
     text-decoration: none;
@@ -12,17 +12,20 @@ body{
     padding: 50px;
 }
 form{
-    color: #bebebe;
+    color: #f1f1f1;
     display: flex;
-    flex-direction: column;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 10px;
 }
 
 fieldset{
-    width: 500px;
+    width: 320px;
+    min-height: 160px;
     padding: 20px;
 }
 
 select{
-    width: 500px;
+    width: 100%;
     margin: 20px 0 20px 0;
 }
